deployment/kubernetes/cpu/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: llm-serving
  labels:
    app: llm-serving
  namespace: user-lmarti
spec:
  selector:
    app: llm-serving
  ports:
  - port: 8000
    protocol: TCP
    targetPort: 8000
    nodePort: 30501
  type: NodePort
